# weather_api_tool

./: README.md  main.py  pyproject.toml  setup_project.py
examples/: README.md  cli_weather.py  weather_tool_p_agentes_ia.py
exemplos_estudo/: exemplo_importacoes.py  exemplo_uso.py  exemplo_weather_client.py  settings.py
tests/: test_basic.py
weather_tool/: __init__.py  client.py  exceptions.py  models.py  settings.py
weather_tool/docs/: CONFIGURATION_GUIDE.md  GUIA_MIGRACAO.md  GUIA_OOP_SIMPLES.md
